--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
     "lint:commit": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.0",
+    "framer-motion": "^10.18.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -35,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "3.1.0",
+    "sass": "^1.69.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
