--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:commit": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "dependencies": {
+    "@mui/x-data-grid": "^6.19.2",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
