--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint:commit"
-    }
-  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,11 +11,15 @@
     "lint:commit": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "dependencies": {
-    "@mui/x-data-grid": "^6.19.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -35,6 +34,6 @@
     "prettier": "3.1.0",
     "sass": "^1.69.7",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "5.1.5"
   }
 }
